<?xml version="1.0" encoding="utf-8"?>
<!-- Floating left glanceable rail over the map (DrivingRailActivity). -->
<TaskPanel
    id="widget_panel"
    controller="@xml/widget_panel_controller"
    role="@array/role_widget_components"
    defaultVariant="@id/opened"
    defaultLayer="@integer/widget_panel_layer"
    displayId="0">

    <Restart policy="DEFAULT" maxRetry="3" />
    <TaskBehavior
        taskProperties="UNTRIMMABLE"
        newTaskLaunchPolicy="REMAIN_IN_SOURCE" />

    <Variant id="@+id/base">
        <Layer layer="@integer/widget_panel_layer" />
        <Bounds
            left="@dimen/widget_panel_left_inset"
            top="0"
            topOffset="@dimen/status_bar_height"
            width="@dimen/widget_panel_width"
            bottom="100%"
            bottomOffset="@dimen/navigation_bar_height" />
        <Insets
            left="0"
            top="@dimen/widget_panel_top_gap"
            right="0"
            bottom="@dimen/widget_panel_bottom_gap" />
        <Corner radius="@dimen/widget_panel_corner_radius" />
        <Alpha alpha="1.0" />
        <Focus onTransition="false" />
    </Variant>

    <Variant id="@+id/opened" parent="@id/base">
        <Visibility isVisible="true" />
    </Variant>

    <Variant id="@+id/closed" parent="@id/base">
        <Visibility isVisible="false" />
        <Bounds
            left="0"
            top="0"
            topOffset="@dimen/status_bar_height"
            width="0"
            bottom="100%"
            bottomOffset="@dimen/navigation_bar_height" />
        <Alpha alpha="0.0" />
    </Variant>

    <Transitions>
        <Transition
            onEvent="_System_OnHomeEvent"
            toVariant="@id/opened"
            duration="@integer/home_restore_transition_ms"
            interpolator="@android:anim/decelerate_interpolator" />
        <Transition
            onEvent="_System_TaskOpenEvent"
            onEventTokens="panelId=app_panel"
            fromVariant="@id/opened"
            toVariant="@id/closed"
            duration="@integer/panel_transition_ms"
            interpolator="@android:anim/accelerate_interpolator" />
        <Transition
            onEvent="_System_TaskPanelEmptyEvent"
            onEventTokens="panelId=app_panel"
            fromVariant="@id/closed"
            toVariant="@id/opened"
            duration="@integer/panel_transition_ms"
            interpolator="@android:anim/decelerate_interpolator" />
        <Transition
            onEvent="@string/event_split_narrow"
            toVariant="@id/closed"
            duration="@integer/split_resize_transition_ms" />
        <Transition
            onEvent="@string/event_split_mid"
            toVariant="@id/closed"
            duration="@integer/split_resize_transition_ms" />
        <Transition
            onEvent="@string/event_split_wide"
            toVariant="@id/closed"
            duration="@integer/split_resize_transition_ms" />
        <Transition
            onEvent="@string/event_close_split"
            toVariant="@id/opened"
            duration="@integer/split_resize_transition_ms" />
    </Transitions>
</TaskPanel>
